Fix digital link wrapping

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -157,8 +157,12 @@ td, th {
 
 .digital-link {
   color: #999;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: bold;
+  word-wrap: break-word;
+  width: 560px;
+  border: solid 1px #DDD;
+  border-radius: 3px;
 }
 
 .italic {
@@ -332,6 +336,10 @@ td, th {
 
   .input-width {
     width: 320px !important;
+  }
+
+  .digital-link {
+    width: 360px;
   }
 }
 
